website/website_app/static/website_app/css/carousel.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-bottom: 40px;
  color: #5a5a5a;
  background-color: #181818;
  background-size: cover;
  background-attachment: fixed;
}

/* CUSTOMIZE THE NAVBAR
------------------------------------------------- */
.btn{
  margin:8px 2px; /*Change to alter position of social media icons within navbar */
}

.mayball_logo{
	margin: 0;
	padding: 0;
	padding-right:2px;
}

@media (max-width: 991px) { /*Collapses the navbar at a larger width than default*/
  .navbar-header {
      float: none;
  }
  .navbar-left,.navbar-right {
      float: none !important;
  }
  .navbar-toggle {
      display: block;
  }
  .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }
  .navbar-fixed-top {
      top: 0;
      border-width: 0 0 1px;
  }
  .navbar-collapse.collapse {
      display: none!important;
  }
  .navbar-nav {
      float: none!important;
      margin-top: 7.5px;
  }
  .navbar-nav>li {
      float: none;
  }
  .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
  }
  .collapse.in{
      display:block !important;
  }
}

.navbar-brand > img { 
    margin-top: -5px;
}

.navbar{
	background-color: transparent;
	background: transparent;
	border-color: transparent;
}

.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
	color:white;
	background-color:rgba(0,0,0,0.5);
}

.navbar-default .navbar-toggle{
	border-color:#FFFAF0
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #3333cc; /* Changes regular toggle color */
}
.navbar-default .navbar-toggle .icon-bar:hover {
  background-color: #fff; /* Changes toggle color on hover */
}


@media(max-width: 1000px){
    .navbar > .container { max-width: 100%; padding: 0; }
	.navbar-collapse { background:rgba(0,0,0,0.5);} 
}

.navbar-default
.navbar-nav>li>a{
	color:white;
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  height: 500px;
  margin-top: -20px;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 500px;
  background-color: black;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 500px;
  object-fit: cover;
  overflow: hidden;
}

.carousel-inner > .item > video {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 500px;
}


/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: 10px;
  margin-left: 10px;
}

.row.featurette {
  background-color: #FFFFFF;
}

.holding-box {
  background-color: #FFFFFF;
  width: 100%;
  padding: 20px 0 20px;
}

.container-fluid {
  padding: 0;
}




/* Featurettes
------------------------- */

.featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
  border-color:rgba(100,100,100,0); /*Sets featurette divider line to white transparent*/
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}

/* COMMITTEE SECTION
-------------------------------------------------*/
.holding-box-title. {
  margin-top: 20px;
  margin-bottom: 20px;
}

.com-name{
  margin:0 0 20px 0;
}

/* MAKING EMBEDDED VIDEO RESPONSIVE */
.iframe-holder {
	position: relative;
	padding-bottom: 56.25%; /* 16:9 */
	padding-top: 25px;
	height: 0;
}
.iframe-holder iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

/* WORKERS PAGE */
.job-descriptions {
    color: white;
}

/* CONTACT PAGE */

.info {
    margin-top: 50px;
    margin-bottom: 70px;
}

.info > h1, label {
    color: white;
}

th, td {
    padding: 10px;
}

.info li {
    color: white;
}

input {
    color: black;
}


/* RESPONSIVE CSS
-------------------------------------------------- */
@media (min-width: 320px) {
  .row {
    width: 100%;
    margin: auto;
  }
}

@media (min-width: 768px) {
  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }

  .row {
    margin: 0 auto;
    width: 750px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
  .row {
    width: 970px;
  }
  .featurette {
    display: flex;
    align-items: center;
  }
}

@media (min-width: 1200px) {
  .row {
    width: 1170px;
  }
}

